--- a/DD.Repositories.Interfaces/DD.Repositories.Interfaces.csproj
+++ b/DD.Repositories.Interfaces/DD.Repositories.Interfaces.csproj
@@ -39,12 +39,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Base\IRepository.cs" />
+    <Compile Include="Common\IPersonRecordRepository.cs" />
+    <Compile Include="Context\IDapperContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DD.Dto.Repository\DD.Dto.Repository.csproj">
-      <Project>{e7d2a0e2-8105-4c9f-906b-4d201a0718b9}</Project>
-      <Name>DD.Dto.Repository</Name>
+    <ProjectReference Include="..\DD.Data\DD.Data.csproj">
+      <Project>{8495da6c-e0f7-471e-8043-387dfb8c5647}</Project>
+      <Name>DD.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DD.Dto.Business\DD.Dto.Business.csproj">
+      <Project>{0c85747e-8616-4ebc-a200-786ce340508b}</Project>
+      <Name>DD.Dto.Business</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
