--- a/DD.Repositories/DD.Repositories.csproj
+++ b/DD.Repositories/DD.Repositories.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper">
+      <HintPath>..\packages\Dapper.1.40\lib\net45\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,23 +42,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Base\Repository.cs" />
+    <Compile Include="Context\DapperContext.cs" />
+    <Compile Include="Common\PersonRecordRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DD.Data\DD.Data.csproj">
       <Project>{8495da6c-e0f7-471e-8043-387dfb8c5647}</Project>
       <Name>DD.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DD.Dto.Repository\DD.Dto.Repository.csproj">
-      <Project>{e7d2a0e2-8105-4c9f-906b-4d201a0718b9}</Project>
-      <Name>DD.Dto.Repository</Name>
+    <ProjectReference Include="..\DD.Dto.Business\DD.Dto.Business.csproj">
+      <Project>{0c85747e-8616-4ebc-a200-786ce340508b}</Project>
+      <Name>DD.Dto.Business</Name>
     </ProjectReference>
     <ProjectReference Include="..\DD.Repositories.Interfaces\DD.Repositories.Interfaces.csproj">
       <Project>{1745a286-c67a-4fa9-bba9-fc4015382f00}</Project>
       <Name>DD.Repositories.Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
