--- a/DiabeticDiary.Web/Web.config
+++ b/DiabeticDiary.Web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DiabeticDiary" connectionString="Data Source=A-SIDOROVICH;Initial Catalog=DiabeticDiary;Persist Security Info=True;Integrated Security=true;Connection Timeout=300;Min Pool Size=20;Max Pool Size=200;" providerName="System.Data.SqlClient"></add>
+    <add name="DiabeticDiary" connectionString="Data Source=A-SIDOROVICH;Initial Catalog=DiabeticDiary;Persist Security Info=True;Integrated Security=true;" providerName="System.Data.SqlClient"></add>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
