--- a/DD.Mappers/DD.Mappers.csproj
+++ b/DD.Mappers/DD.Mappers.csproj
@@ -39,7 +39,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Interfaces\IEntityMapper.cs" />
+    <Compile Include="Common\Interfaces\IMapper.cs" />
+    <Compile Include="Common\Interfaces\IViewModelMapper.cs" />
+    <Compile Include="Common\Mapper.cs" />
+    <Compile Include="Entities\PersonRecordEntityMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\PersonRecordViewModelMapper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DD.Data\DD.Data.csproj">
+      <Project>{8495da6c-e0f7-471e-8043-387dfb8c5647}</Project>
+      <Name>DD.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DD.Dto.Business\DD.Dto.csproj">
+      <Project>{0c85747e-8616-4ebc-a200-786ce340508b}</Project>
+      <Name>DD.Dto</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DD.ViewModels\DD.ViewModels.csproj">
+      <Project>{c6c2f8d7-4b39-4feb-9327-9f0998a051dd}</Project>
+      <Name>DD.ViewModels</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Common\Settings.ttinclude" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
